# Ratvar

./: CMakeLists.txt  README.md  bitboard.cc  meson.build  scratch.cc
.cache/clangd/index/: bitboard.cc.98FF6E6A51D3CD71.idx  bitboard.h.F13A755D23B2F58B.idx  bitboard_test.cc.D2B3D4A9DE16389A.idx  gtest-all.cc.58A5AE63906F804D.idx  gtest-death-test-internal.h.500304ABE37A51B9.idx  gtest-death-test.cc.F5160F683EB9EF6F.idx  gtest-death-test.h.B583FF6A97EBF14D.idx  gtest-filepath.cc.5C74ED091F72F5CD.idx  gtest-filepath.h.1C482BD646F2812A.idx  gtest-internal-inl.h.0C9FF4E413E8887C.idx  gtest-internal.h.2BB8D5F5FE6D238B.idx  gtest-matchers.cc.A55855ED33D5ED33.idx  gtest-matchers.h.189B8D08D6BC2964.idx  gtest-message.h.A9A2EB4EEFEE7EB9.idx  gtest-param-test.h.9B5147734E96775D.idx  gtest-param-util.h.CA7E21CC9AF81426.idx  gtest-port-arch.h.5C8B78F23F6D63F8.idx  gtest-port.cc.7588C87015C45546.idx  gtest-port.h.70633339B0BFEAB6.idx  gtest-port.h.840DD2046B077AF4.idx  gtest-printers.cc.800549BC9B9FA685.idx  gtest-printers.h.0B5BF9E684DCF413.idx  gtest-printers.h.E41BBC7005E8663D.idx  gtest-spi.h.608061C53F41AD18.idx  gtest-string.h.6131C93BDDC32573.idx  gtest-test-part.cc.96B73742DD523BDB.idx  gtest-test-part.h.B0B817728D258330.idx  gtest-type-util.h.AD3AB29801F27AC6.idx  gtest-typed-test.cc.C9E0D7C3F023E596.idx  gtest-typed-test.h.AD12FF687D1A028A.idx  gtest.cc.9D43D86A4F13743A.idx  gtest.h.69A59822F0BE90FE.idx  (+3 more)
src/: bitboard.cc  bitboard.h  pawns.cc  pawns.h
src/julia/: bitboard.jl  pawns.jl
tests/: bitboard_test.cc  meson.build  pawns_test.cc  tests.cc
